Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-498

Crash if multiple updates to a flushed row come in the same batch

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • M4.5
    • None
    • tablet
    • None
    • M5

    Description

      Currently we have a bug where, if a single batch/operation has two updates for a single row, and that row has already been flushed, then we try to make two inserts into a DMS with the same key at the same timestamp, resulting in an assertion failure:

      ^[[0;31mF0910 17:37:15.487797 18644 deltamemstore.cc:74] Check failed: !mutation.exists() Already have an entry for rowid 23 at timestamp 9

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: