Fix AlterTableTest::TestAlterUnderWriteLoad

* Annotates a false positive race for the flush threshold flag

  AlterTableTest changes the flush threshold in a few places after
  the TS has already started. This is "racey" but not a big deal -
  it's OK if the change isn't immediately visible to other threads,
  and isn't the sort of load that would get optimized out. So, we
  annotate it as a benign race.

* Changes the updater thread to not construct any batches of updates.

  Due to KUDU-498, if we batch updates together, we can cause a crash
  unrelated to alter table.

* Changes the alter schema path to properly lock its acquisition of
  the Components shared_ptr. This fixes an ASAN error I saw on
  occasion.

* Changes the default scanner RPC timeout to 20s instead of 5s.
  Without this, I saw scanner timeouts with some regularity on my
  box, since unfortunately we are preventing scans from starting
  for the entirety of the flush during schema change.

Change-Id: Idd4bc6ed853d2cd551ec4e6aebead0789f480e5b